Criado novos mecanismos para fazer check in, check out, eventos relacionados e testes